syntax = "proto2";

package alluxio.proto.journal;

// next available id: 3
enum PolicyScope {
  SINGLE = 0;
  RECURSIVE = 1;
  RECURSIVE_MOUNT = 2;
}

// next available id: 8
message PolicyDefinitionEntry {
  optional int64 id = 1;
  optional string name = 2;
  optional string path = 3;
  optional int64 created_at = 4;
  optional PolicyScope scope = 5;
  optional string condition = 6;
  optional string action = 7;
}

// next available id: 2
message PolicyRemoveEntry {
  optional string name = 1;
}
